--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,33 @@
-# If you prefer the allow list template instead of the deny list, see community template:
-# https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
-#
 # Binaries for programs and plugins
 *.exe
-*.exe~
 *.dll
 *.so
 *.dylib
-
-# Test binary, built with `go test -c`
 *.test
-
-# Code coverage profiles and other test artifacts
 *.out
-coverage.*
-*.coverprofile
-profile.cov
 
-# Dependency directories (remove the comment below to include it)
-# vendor/
+# Output of the go coverage tool
+*.coverprofile
 
 # Go workspace file
 go.work
 go.work.sum
 
-# env file
-.env
+# Vendor directory
+/vendor/
 
-# Editor/IDE
-# .idea/
-# .vscode/
+# Dependency directories (remove the comment below if you use these tools)
+/Godeps/
+
+# IDE/editor files
+.vscode/
+.idea/
+*.swp
+
+# Log files
+*.log
+
+# OS-specific
+.DS_Store
+Thumbs.db
+
